<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Квадратное изображение -->
        <ImageView
            android:id="@+id/imageViewPlantPhoto"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/plant_photo"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textViewPlantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/green_dark"
            app:layout_constraintStart_toEndOf="@id/imageViewPlantPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewPlantPhoto"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/textViewPlantingYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plant_planting_year_2000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/imageViewPlantPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPlantName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>